# colette

./: .commitlintrc.yml  .env.example  .env.production  .env.staging  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  cliff.toml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  program.md  pyproject.toml  skills-lock.json
.claude/: settings.local.json
.devtool/features/: final-integration-2026-04-04.md  phase-2-feedback-engineering-2026-04-04.md  phase-3-backlog-work-items-2026-04-04.md  phase-4-sprint-orchestration-2026-04-04.md  phase-5-bug-fix-flow-2026-04-04.md  phase-6-retrospective-2026-04-04.md  phase-7a-middleware-2026-04-04.md  phase-7b-context-summarization-2026-04-04.md  phase-7c-subagent-isolation-2026-04-04.md  phase-7d-artifact-backend-2026-04-04.md  phase-7e-sandbox-execution-2026-04-04.md  phase-7f-skills-memory-2026-04-04.md  phase-7g-per-tool-hil-2026-04-04.md
.devtool/features/done/: final-integration-2026-04-04.md  phase-1-rework-loops-2026-04-04.md  phase-2-feedback-engineering-2026-04-04.md  phase-3-backlog-work-items-2026-04-04.md  phase-4-sprint-orchestration-2026-04-04.md  phase-5-bug-fix-flow-2026-04-04.md  phase-6-retrospective-2026-04-04.md  phase-7a-middleware-2026-04-04.md  phase-7b-context-summarization-2026-04-04.md  phase-7c-subagent-isolation-2026-04-04.md  phase-7d-artifact-backend-2026-04-04.md  phase-7e-sandbox-execution-2026-04-04.md  phase-7f-skills-memory-2026-04-04.md  phase-7g-per-tool-hil-2026-04-04.md
.ecc-design/slide-previews/: preview-1-swiss-dark.html  preview-2-paper-dark.html  preview-3-linear.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
RELEASE/: index.html
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_github_fields.py
api/: index.html
api/config/: index.html
api/llm/: index.html
api/observability/: index.html
api/orchestrator/: index.html
api/schemas/: index.html
api/tools/: index.html
architecture/: index.html
docs/: Colette_Software_Requirements_Specification.docx  Colette_Software_Requirements_Specification.md  Complete_Guide_to_Building_AI_Agent_Systems.docx  Complete_Guide_to_Building_AI_Agent_Systems.md  MultiAgent_SDLC_System_Architecture.docx  MultiAgent_SDLC_System_Architecture.md  RELEASE.md  architecture.md  atomic-code-generation.md  colette_vs_openclaw_comparison.md  compass_artifact_wf-94ffe879-3c13-4da6-a84c-9274b398ec2e_text_markdown.md  compass_artifact_wf-b51e327d-74f2-4c24-8450-99148f116bd8_text_markdown.md  compass_artifact_wf-f571ba0b-8d6f-4c14-937d-6bacbf5fc946_text_markdown.md  development_phase_plan.md  getting-started.md  guide.md  index.md  requirements_traceability_matrix.md  sequence_diagram.md  srs_gap_analysis.md  web-ui-plan.md
docs/api/: config.md  index.md  llm.md  observability.md  orchestrator.md  schemas.md  tools.md
docs/deterministic-eval/: 00-overview.md  01-contract-checker.md  02-coverage-estimator.md  03-code-verifier.md  04-security-patterns.md  05-completeness-scorer.md  06-cross-review-checker.md  07-integration-plan.md  08-testing-strategy.md
docs/web-ui/: 01-vision-and-design-system.md  02-backend-api-requirements.md  03-implementation-plan.md
getting-started/: index.html
guide/: index.html
scripts/: docx_to_md.py
search/: search_index.json
sequence_diagram/: index.html
src/colette/: __init__.py  artifacts.py  build_info.py  cli.py  cli_review.py  cli_ui.py  config.py
src/colette/agents/: async_task_manager.py  subagent.py
src/colette/api/: __init__.py  app.py  deps.py  middleware.py  schemas.py
src/colette/backends/: composite.py  protocol.py  state.py
src/colette/db/: __init__.py  base.py  cleanup.py  models.py  repositories.py  session.py
src/colette/eval/: __init__.py  _ast_helpers.py  _pattern_registry.py  code_verifier.py  completeness_scorer.py  contract_checker.py  coverage_estimator.py  cross_review_checker.py  (+1 more)
tests/: conftest.py
tests/integration/: conftest.py
tests/unit/: test_agent_config.py  test_agent_factory.py  test_agent_presence.py  test_artifacts.py  test_build_info.py  test_circuit_breaker.py  test_cli.py  test_cli_commands.py  test_cli_review.py  test_cli_ui.py  test_config.py  test_console_logging.py  test_environment.py  test_error_propagation.py  test_error_recovery.py  test_llm.py  test_no_public_api.py  test_observability.py  test_observability_phase7.py  test_openapi_validator.py  test_schemas.py  test_security.py  test_streaming.py  test_structured.py  test_tools.py  test_tools_implementation.py  test_version.py  test_web_search.py
web/: package-lock.json  package.json  vite.config.ts
web-ui-plan/: index.html
web/src/: App.tsx  index.css  main.tsx
web/stitch-preview/: agent-board.html  dashboard.html  pipeline-view.html  project-list-2.html  project-list.html
(+367 files in other folders)
