[project]
name = "colette"
version = "0.1.0"
description = "Multi-agent AI system for autonomous end-to-end software development"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "Colette Team" }]
keywords = ["ai", "agents", "sdlc", "multi-agent", "code-generation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    # Orchestration
    "langgraph>=1.0.10,<2.0",
    "langgraph-checkpoint>=4.0,<5.0", # CVE-2026-27794
    "langchain-core>=1.2.11,<2.0",
    # LLM Gateway
    "litellm>=1.60,<2.0",
    # Memory
    "mem0ai>=0.1,<1.0",
    "rank-bm25>=0.2,<1.0",
    "tiktoken>=0.9,<1.0",
    # Schemas & Validation
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    # Database
    "asyncpg>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.15,<2.0",
    "pgvector>=0.3,<1.0",
    # Observability
    "opentelemetry-api>=1.29,<2.0",
    "opentelemetry-sdk>=1.29,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29,<2.0",
    "structlog>=24.0,<26.0",
    # HTTP
    "httpx>=0.28,<1.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    # Terminal UI
    "rich>=13.0,<15.0",
    "textual>=1.0,<9.0",
    # Utilities
    "pyyaml>=6.0,<7.0",
    "click>=8.1,<9.0",
    "tenacity>=9.0,<10.0",
    "python-dotenv>=1.0,<2.0",
    "langchain-community>=0.4.1",
]

[project.optional-dependencies]
graph = [
    # Knowledge graph (Graphiti/Neo4j)
    "graphiti-core>=0.6,<1.0",
    "neo4j>=5.27,<6.0",
]
rerank = [
    # Cohere reranker
    "cohere>=5.0,<6.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "pytest-cov>=6.0,<7.0",
    "pytest-xdist>=3.5,<4.0",
    "pytest-mock>=3.14,<4.0",
    "respx>=0.22,<1.0",

    # Linting & Formatting
    "ruff>=0.11,<1.0",

    # Type Checking
    "mypy>=1.14,<2.0",
    "types-PyYAML>=6.0",

    # Security
    "bandit>=1.8,<2.0",
    "pip-audit>=2.8,<3.0",

    # Debug
    "ipdb>=0.13,<1.0",

    # Documentation
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.6,<10.0",
    "mkdocstrings[python]>=0.29,<1.0",
]

[project.scripts]
colette = "colette.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/colette"]

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "RUF",  # ruff-specific
]
ignore = [
    "S101",   # assert allowed in tests
    "S603",   # subprocess calls (needed for tool execution)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S108"]
"src/colette/tools/*.py" = ["S602", "S607"]  # tool wrappers legitimately run subprocesses

[tool.ruff.lint.isort]
known-first-party = ["colette"]

# ── Mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
packages = ["colette"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_core.*",
    "langchain_community.*",
    "litellm.*",
    "mem0ai.*",
    "graphiti_core.*",
    "neo4j.*",
    "pgvector.*",
    "cohere.*",
    "rank_bm25.*",
]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=colette",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (require services)",
    "e2e: End-to-end tests (full pipeline)",
    "slow: Tests that take >10s",
]

# ── Coverage ──────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["colette"]
branch = true
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
]
